force-app/main/default/objects/OS_Property__c/fields/os_Other_Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>os_Other_Fee_Description__c</fullName>
    <label>Other Fee Description</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>