force-app/main/default/objects/OS_Property__c/fields/os_Other_fees__c.field-meta.xml
<CustomField>
    <fullName>os_Other_fees__c</fullName>
    <label>Other fees</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>