force-app/main/default/objects/OS_Property__c/fields/os_Parking_spaces__c.field-meta.xml
<CustomField>
    <fullName>os_Parking_spaces__c</fullName>
    <label>Parking spaces</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>