force-app/main/default/objects/OS_Property__c/fields/os_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>