force-app/main/default/objects/OS_Property__c/fields/os_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>os_Payment_Percentage__c</fullName>
    <label>Payment Percentage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>