force-app/main/default/objects/OS_Property__c/fields/os_Price_Sq_ft_AED__c.field-meta.xml
<CustomField>
    <fullName>os_Price_Sq_ft_AED__c</fullName>
    <label>Price/Sq.ft.</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>