force-app/main/default/objects/OS_Property__c/fields/os_Price_sq_ft_AED_Internal_Area__c.field-meta.xml
<CustomField>
    <fullName>os_Price_sq_ft_AED_Internal_Area__c</fullName>
    <label>Price/sq.ft - Internal Area</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>