force-app/main/default/objects/OS_Property__c/fields/os_Project__c.field-meta.xml
<CustomField>
    <fullName>os_Project__c</fullName>
    <label>Project</label>
    <referenceTo>os_Project__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>