force-app/main/default/objects/OS_Property__c/fields/os_Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Admin__c</fullName>
    <formula>os_Project__r.os_Project_Admin__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Admin</label>
    <type>Text</type>
</CustomField>