force-app/main/default/objects/OS_Property__c/fields/os_Project_Approver__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Approver__c</fullName>
    <formula>os_Project__r.os_Project_Approver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Approver</label>
    <type>Text</type>
</CustomField>