force-app/main/default/objects/OS_Property__c/fields/os_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Id__c</fullName>
    <formula>os_Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>