force-app/main/default/objects/OS_Property__c/fields/os_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Name__c</fullName>
    <formula>os_Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>