force-app/main/default/objects/OS_Property__c/fields/os_Property_owner__c.field-meta.xml
<CustomField>
    <fullName>os_Property_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Units (Property owner)</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>