force-app/main/default/objects/OS_Property__c/fields/os_Purchase_date__c.field-meta.xml
<CustomField>
    <fullName>os_Purchase_date__c</fullName>
    <label>Purchase date</label>
    <type>Date</type>
</CustomField>