force-app/main/default/objects/OS_Property__c/fields/os_Red_List_till_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Red_List_till_Date__c</fullName>
    <label>Red List till Date</label>
    <type>Date</type>
</CustomField>