force-app/main/default/objects/OS_Property__c/fields/os_RedListed_Since__c.field-meta.xml
<CustomField>
    <fullName>os_RedListed_Since__c</fullName>
    <formula>TODAY() - DATEVALUE( Red_Listed_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RedListed Since</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>