force-app/main/default/objects/OS_Property__c/fields/os_Sales_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Sales_Agent_Name__c</fullName>
    <label>Sales Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>