force-app/main/default/objects/OS_Property__c/fields/os_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Sales_Date__c</fullName>
    <label>Sales Date</label>
    <type>Date</type>
</CustomField>