force-app/main/default/objects/OS_Property__c/fields/os_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>os_Sales_Price__c</fullName>
    <label>Sales Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>