force-app/main/default/objects/OS_Property__c/fields/os_Second_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Second_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecondAgent</relationshipName>
    <type>Lookup</type>
</CustomField>