force-app/main/default/objects/OS_Property__c/fields/os_Sold_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Sold_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SoldBy</relationshipName>
    <type>Lookup</type>
</CustomField>