force-app/main/default/objects/OS_Property__c/fields/os_Sold_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>os_Sold_Date_Time__c</fullName>
    <label>Sold Date Time</label>
    <type>DateTime</type>
</CustomField>