force-app/main/default/objects/OS_Property__c/fields/os_Split_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Split_Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Agent Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SplitAgentName</relationshipName>
    <type>Lookup</type>
</CustomField>