force-app/main/default/objects/OS_Property__c/fields/os_State_Code_pb__c.field-meta.xml
<CustomField>
    <fullName>os_State_Code_pb__c</fullName>
    <label>State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>