force-app/main/default/objects/OS_Property__c/fields/os_Stories__c.field-meta.xml
<CustomField>
    <fullName>os_Stories__c</fullName>
    <label>Stories</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>