force-app/main/default/objects/OS_Property__c/fields/os_Street_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Street_pb__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>