force-app/main/default/objects/OS_Property__c/fields/os_Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>os_Sub_Community__c</fullName>
    <formula>os_Project__r.Sub_Community__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Community</label>
    <type>Text</type>
</CustomField>