force-app/main/default/objects/OS_Property__c/fields/os_Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>os_Terrace_Area__c</fullName>
    <label>Terrace Area</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>