force-app/main/default/objects/OS_Property__c/fields/os_Title__c.field-meta.xml
<CustomField>
    <fullName>os_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>