force-app/main/default/objects/OS_Property__c/fields/os_Title_Arabic__c.field-meta.xml
<CustomField>
    <fullName>os_Title_Arabic__c</fullName>
    <label>Title(Arabic)</label>
    <type>TextArea</type>
</CustomField>