force-app/main/default/objects/OS_Property__c/fields/os_uaefield_Price_on_Request__c.field-meta.xml
<CustomField>
    <fullName>os_uaefield_Price_on_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price on Request</label>
    <type>Checkbox</type>
</CustomField>