force-app/main/default/objects/OS_Property__c/fields/os_uaefield_Propertyfinder_Region__c.field-meta.xml
<CustomField>
    <fullName>os_uaefield_Propertyfinder_Region__c</fullName>
    <label>Propertyfinder_Region</label>
    <type>TextArea</type>
</CustomField>