force-app/main/default/objects/OS_Property__c/fields/os_uaefield_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>os_uaefield_Service_Charge__c</fullName>
    <label>Service Charge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>