force-app/main/default/objects/OS_Property__c/fields/os_uaefield_Sub_Community_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>os_uaefield_Sub_Community_Propertyfinder__c</fullName>
    <label>Sub Community - Propertyfinder</label>
    <type>TextArea</type>
</CustomField>