force-app/main/default/objects/OS_Property__c/fields/os_uaefields_Building_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_Building_Dubizzle__c</fullName>
    <label>Building - Dubizzle</label>
    <type>TextArea</type>
</CustomField>