force-app/main/default/objects/OS_Property__c/fields/os_uaefields_City_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_City_Propertyfinder__c</fullName>
    <label>City - Propertyfinder</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>