force-app/main/default/objects/OS_Property__c/fields/os_uaefields_Community_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_Community_Propertyfinder__c</fullName>
    <label>Community - Propertyfinder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>