force-app/main/default/objects/OS_Property__c/fields/os_uaefields_Description_Arabic_pb__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_Description_Arabic_pb__c</fullName>
    <label>Description (Arabic)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>