force-app/main/default/objects/OS_Property__c/fields/os_uaefields_Developer__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Developer</relationshipName>
    <type>Lookup</type>
</CustomField>