force-app/main/default/objects/OS_Property__c/fields/os_uaefields_Floor__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_Floor__c</fullName>
    <label>Floor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>