force-app/main/default/objects/OS_Property__c/fields/os_uaefields_Furnished__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_Furnished__c</fullName>
    <label>Furnished</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>