force-app/main/default/objects/OS_Property__c/fields/os_uaefields_Parking_spaces__c.field-meta.xml
<CustomField>
    <fullName>os_uaefields_Parking_spaces__c</fullName>
    <label>Parking spaces</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>