force-app/main/default/objects/OS_Property__c/fields/os_Unit_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit 18 Digit Id</label>
    <type>Text</type>
</CustomField>