force-app/main/default/objects/OS_Property__c/fields/os_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_Number__c</fullName>
    <label>Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>