force-app/main/default/objects/OS_Property__c/fields/os_Unit_Number_F__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_Number_F__c</fullName>
    <formula>os_Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number(F)</label>
    <type>Text</type>
</CustomField>