force-app/main/default/objects/OS_Property__c/fields/os_Unit_Number_HL__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_Number_HL__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , os_Unit_Number__c , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number (HL)</label>
    <type>Text</type>
</CustomField>