force-app/main/default/objects/OS_Property__c/fields/os_Unit_Price_AED__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_Price_AED__c</fullName>
    <label>Unit Price AED</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>