force-app/main/default/objects/OS_Property__c/fields/os_Unit_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_Price_USD__c</fullName>
    <label>Unit Price USD</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>