force-app/main/default/objects/OS_Property__c/fields/os_Unit_Series__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_Series__c</fullName>
    <formula>Right(  os_Unit_Number__c , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Series</label>
    <type>Text</type>
</CustomField>