force-app/main/default/objects/OS_Property__c/fields/os_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Unit_Type__c</fullName>
    <label>Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>