force-app/main/default/objects/OS_Property__c/fields/os_Units__c.field-meta.xml
<CustomField>
    <fullName>os_Units__c</fullName>
    <label>Units</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>