force-app/main/default/objects/OS_Property__c/fields/os_User__c.field-meta.xml
<CustomField>
    <fullName>os_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>