force-app/main/default/objects/OS_Property__c/fields/os_VAT_5__c.field-meta.xml
<CustomField>
    <fullName>os_VAT_5__c</fullName>
    <formula>os_Sales_Price__c * 5 / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT (5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>