force-app/main/default/objects/OS_Property__c/fields/os_View__c.field-meta.xml
<CustomField>
    <fullName>os_View__c</fullName>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marina</fullName>
            </value>
            <value>
                <fullName>Harbor</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Golf Course</fullName>
            </value>
            <value>
                <fullName>Park</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Courtyard</fullName>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Sheikh Zayed Road/Zaabeel Park</fullName>
            </value>
            <value>
                <fullName>Sheikh Zayed Road/Downtown</fullName>
            </value>
            <value>
                <fullName>Ocean/Community</fullName>
            </value>
            <value>
                <fullName>Zaabeel Park/Dubai Frame</fullName>
            </value>
            <value>
                <fullName>Tower 2/Community</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf</fullName>
            </value>
            <value>
                <fullName>DIFC / Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf &amp; Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>Zaabeel &amp; DIFC / Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf &amp; The Dubai Frame</fullName>
            </value>
            <value>
                <fullName>The Dubai Frame &amp; Zaabeel View</fullName>
            </value>
            <value>
                <fullName>The Dubai Frame</fullName>
            </value>
            <value>
                <fullName>Sea</fullName>
            </value>
            <value>
                <fullName>Ocean</fullName>
            </value>
            <value>
                <fullName>Zaabeel</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf / The Dubai Frame</fullName>
            </value>
            <value>
                <fullName>DIFC Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>Zaabeel / DIFC Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>Arabian Gulf / DIFC Burj Khalifa</fullName>
            </value>
            <value>
                <fullName>The Dubai Frame / Zaabeel</fullName>
            </value>
            <value>
                <fullName>Ocean View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>