force-app/main/default/objects/OS_Property__c/fields/os_Virtual_Account_IBAN__c.field-meta.xml
<CustomField>
    <fullName>os_Virtual_Account_IBAN__c</fullName>
    <label>Virtual Account IBAN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>