force-app/main/default/objects/OS_Property__c/fields/os_Year_Built_Text__c.field-meta.xml
<CustomField>
    <fullName>os_Year_Built_Text__c</fullName>
    <label>Year Built</label>
    <length>255</length>
    <type>Text</type>
</CustomField>