force-app/main/default/objects/OS_Property__c/fields/os_Zip_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Zip_pb__c</fullName>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>