force-app/main/default/objects/OS_Property__c/fields/osDate_the_reservation_fees_will_be_paid__c.field-meta.xml
<CustomField>
    <fullName>osDate_the_reservation_fees_will_be_paid__c</fullName>
    <label>Date the reservation fees will be paid</label>
    <type>Date</type>
</CustomField>